//file:noinspection GroovyAssignabilityCheck -> ignore
plugins {
	id 'eclipse'
	id 'idea'
	id 'maven-publish'
	id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
	id 'net.neoforged.gradle.userdev' version '7.0.190'
	id 'com.diffplug.spotless' version "7.0.0"
}

version = minecraft_version + "-v" + mod_version + "-" + new Date().format("dd.MM.yyyy")
group = mod_group

base {
	archivesName = "DragonSurvival"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

runs {
	configureEach {
		systemProperties 'dragonsurvival.data_generation': 'false'

		systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		systemProperty 'neoforge.logging.markers', 'REGISTRIES'
		systemProperty 'neoforge.logging.console.level', 'debug'

		modSource project.sourceSets.main
	}

	client {
		arguments '--username', 'Dev####'
	}

	client_static {
		runType 'client'
		// The UUID is the one that will get assigned in multiplayer based on the name 'Dev'
		arguments '--username', 'Dev', "--uuid", "380df991-f603-344c-a090-369bad2a924a"
	}

	server {
		arguments
	}

	gameTestServer {}

	data {
		systemProperties 'dragonsurvival.data_generation': 'true'
		arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
	}

	junit {}
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
	maven {
		name = 'GeckoLib'
		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
		content {
			includeGroup("software.bernie.geckolib")
		}
	}
	maven { /* Mixin Squared */ url "https://maven.bawnorton.com/releases" }
	maven { /* JEI */ url "https://maven.blamejared.com" }
	maven { /* Curios */ url "https://maven.theillusivec4.top/" }
	maven {
		url "https://cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	maven { url "https://api.modrinth.com/maven" }
}

dependencies {
	implementation "net.neoforged:neoforge:${neo_version}"

	// --- Dependencies --- //

	implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"

	// --- Compatibility --- //

	// JEI
	compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
	runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

	// Curios
	compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}:api"
	implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"

	// Sophisticated Backpacks
	// https://www.curseforge.com/minecraft/mc-mods/sophisticated-backpacks/files/all?page=1&pageSize=20&version=1.21.1&gameVersionTypeId=6&showAlphaFiles=hide
	compileOnly "curse.maven:sophisticated-backpacks-422301:8319596" // 3.25.64.1933
	// https://www.curseforge.com/minecraft/mc-mods/sophisticated-core/files/all?page=1&pageSize=20&version=1.21.1&gameVersionTypeId=6&showAlphaFiles=hide
	compileOnly "curse.maven:sophisticated-core-618298:8337387" // 1.4.62.207

	// Cosmetic Armor Reworked
	compileOnly "curse.maven:cosmetic-armor-reworked-237307:5610814" // v1

	// Create
	implementation "curse.maven:create-328085:7408951" // 6.0.9

	// Better Combat
	compileOnly "curse.maven:better-combat-by-daedelus-639842:6097296" // 2.1.3
	compileOnly "curse.maven:cloth-config-348521:5729127" // 15.0.140
	compileOnly "curse.maven:playeranimator-658587:6024462" // 2.0.1

	// AppleSkin
	implementation "curse.maven:appleskin-248787:5586600" // 3.0.5

	// Silent Gems
	compileOnly "curse.maven:silentgems-220311:5846347" // 5.0.3
	runtimeOnly "curse.maven:silentlib-242998:6285150" // 10.4.0

	// Sodium & Iris
	compileOnly "curse.maven:sodium-394468:6382651" // 0.6.13
	compileOnly "curse.maven:irisshaders-455508:6661598" // 1.8.12

	// Create: Aeronautics
//	implementation "maven.modrinth:sable:1.0.6+mc1.21.1"
	//runtimeOnly "maven.modrinth:create-aeronautics:1.0.3+mc1.21.1"

//	implementation "curse.maven:embeddium-908741:6118392" // 1.0.15
//	implementation "curse.maven:neoculus-1200907:6394928" // 1.8.6

//	implementation "curse.maven:sodium-core-shader-support-956376:6391144" // 1.3.4
//	implementation "curse.maven:dynamiclights-reforged-551736:6044477" // 1.0.10
//	implementation "curse.maven:magnesium-extras-558905:6394141" // 1.0.8

	// Free Cam
	compileOnly "curse.maven:free-cam-557076:5572364" // 1.3.0

	// Vista
	compileOnly "curse.maven:vista-1368607:8071509" // 4.3.0
	compileOnly "curse.maven:selene-499980:8065893" // 3.0.7
	compileOnly "curse.maven:watermedia-869524:7281929" // 2.1.37

	// EMI
	compileOnly "curse.maven:emi-580555:6420931" // 1.1.22

	compileOnly "curse.maven:multi-mine-227887:5754479"

	// --- Testing --- //

	implementation "curse.maven:spark-361579:5759671" // 1.10.109
	implementation "curse.maven:jade-324717:6011258" // 15.9.2

//	implementation "curse.maven:lithium-360438:6290413" // 0.15.0
//	implementation "curse.maven:immediatelyfast-686911:6376910" // 1.6.5
//	implementation "curse.maven:flerovium-1142875:6547097" // 1.0.6
//	implementation "maven.modrinth:c2me-neoforge:0.3.0+alpha.0.72+1.21.1"

//	implementation "curse.maven:apothic-attributes-898963:6751650" // 2.9.0
//	implementation "curse.maven:placebo-283644:6926281" // 9.9.1

	// Immersive portals
//    implementation "curse.maven:immersive-portals-for-forge-355440:6667779" // 2.4.0
//    implementation "curse.maven:cloth-config-348521:5729127" // 15.0.140

//    implementation "curse.maven:additional-dragons-982609:7184517" // 1.2.8

//    runtimeOnly "curse.maven:terrafirmacraft-302973:7150812" // 4.0.9
//    runtimeOnly "curse.maven:patchouli-306770:6842247" // 92

	// https://www.curseforge.com/minecraft/mc-mods/overgeared/files/all?page=1&pageSize=20&version=1.21.1&gameVersionTypeId=6&showAlphaFiles=hide
//	implementation "curse.maven:overgeared-1277786:8298434" // 1.16.16

	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// --- Mixin --- //

	implementation(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-common:${mixin_squared_version}"))
	implementation(jarJar("com.github.bawnorton.mixinsquared:mixinsquared-forge:${mixin_squared_version}")) {
		jarJar.ranged(it, "[${mixin_squared_version},)")
	}
}

tasks.withType(ProcessResources).configureEach {
	var replaceProperties = [
			minecraft_version           : minecraft_version,
			minecraft_version_range     : minecraft_version_range,
			neo_version                 : neo_version,
			neo_version_range           : neo_version_range,
			loader_version_range        : loader_version_range,
			geckolib_version_range      : geckolib_version_range,
			mod_id                      : mod_id,
			mod_name                    : mod_name,
			mod_license                 : mod_license,
			mod_version                 : mod_version,
			mod_authors                 : mod_authors,
			pack_format_number          : pack_format_number,
	]

	duplicatesStrategy = DuplicatesStrategy.WARN

	inputs.properties replaceProperties

	filesMatching(['META-INF/neoforge.mods.toml']) {
		expand replaceProperties + [project: project]
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}

minecraft {
	accessTransformers {
		file('src/main/resources/META-INF/accesstransformer.cfg')
	}
}

// Enable JUnit in Gradle:
test {
	useJUnitPlatform()
}

// We use spotless for code formatting.
spotless {
	format 'misc', {
		// define the files to apply `misc` to
		target '*.gradle', '.gitattributes', '.gitignore'

		// define the steps to apply to those files
		trimTrailingWhitespace()
		leadingSpacesToTabs()
		endWithNewline()
	}

	java {
		target 'src/*/java/**/*.java'

		// note: '' is for all other imports \\# is a prefix for static
		// There's an empty line between all groups; use | to join without empty lines
		importOrder('', 'javax|java', '\\#')
		removeUnusedImports()
		formatAnnotations()
		leadingTabsToSpaces()
	}
}
